<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="412dp"
        android:layout_height="152dp"
        android:layout_marginBottom="36dp"
        android:background="@color/LightGray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/toVLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@color/LightGray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fromTextView"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fromText"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"


                android:entries="@array/Scale"
                android:popupBackground="@color/darkWhite" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toVLinearLayout"
        android:layout_width="416dp"
        android:layout_height="152dp"
        android:layout_marginBottom="80dp"
        android:background="@color/LightGray"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ButtonLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/toHLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toTextView"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toText"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Scale"
                android:popupBackground="@color/darkWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="408dp"
            android:layout_height="77dp"
            android:text="@string/defaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonLinearLayout"
        android:layout_width="418dp"
        android:layout_height="235dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonConstraint"
            android:layout_width="match_parent"
            android:layout_height="187dp">

            <Button
                android:id="@+id/buttonConvert"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:layout_marginTop="28dp"
                android:background="@color/LightGray"
                android:text="@string/convertButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:background="@color/LightGray"
                android:text="@string/resetButton"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonConvert" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
